# Medical-Diagnosis

./: main.py  pyproject.toml
notebooks/: Demo.ipynb  NIH_data_preprocessing+_efficeient_tuning.ipynb  __notebook_source__.ipynb  efficient-net chest xray.ipynb
